# Birjabot

./: CMakeLists.txt  main.cpp
include/: Bot.hpp  Command.hpp  DBUtils.hpp  Types.hpp  Utils.hpp
src/: AddGod.cpp  AddGodCommand.cpp  AddUser.cpp  BotStart.cpp  CheckUser.cpp  Convert.cpp  DemoteGod.cpp  DemoteGodCommand.cpp  GenericHandler.cpp  GetGods.cpp  GetUser.cpp  GiveCurrencyCommand.cpp  OpenWallet.cpp  PrepareMessage.cpp  ResetWalletCommand.cpp  SeizeCurrencyCommand.cpp  SetUserBalance.cpp  TransferCurrencyCommand.cpp  UserFromJson.cpp
